Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32235

mysql_json cannot be used on newly created table

Details

    Description

      I have a customer that is attempting to migrate from RDS MySQL 5.7 to RDS MariaDB 10.6. They make extensive use of the JSON column type, which, as you know, is incompatible with MariaDB when using RBR.

      The mysql_json plugin was loaded into RDS as a workaround, but the plugin has some severe issues from the beginning. Below is a brand new table creation. Why do I have to dump this data from MySQL (not in use here) to use a brand new table?

      mysql> CREATE TABLE testjson (t mysql_json NOT NULL);
      Query OK, 0 rows affected (0.01 sec)
       
      mysql> INSERT INTO testjson VALUES ('{"k1":"v1"}');
      Query OK, 1 row affected (0.00 sec)
       
      mysql> SELECT * FROM testjson;
      ERROR 1105 (HY000): Error parsing MySQL JSON format, please dump this table from MySQL and then restore it to be able to use it in MariaDB.
      

      Attachments

        Issue Links

          Activity

            People

              anel Anel Husakovic
              matthewb Matthew
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.